syntax = "proto3";

import "google/protobuf/timestamp.proto";

package tracing;

message Log {
  google.protobuf.Timestamp timestamp = 1;
  oneof event {
    Start start = 2;
    Shutdown shutdown = 3;
    SendWhoAreYou send_whoareyou = 4;
    SendOrdinaryMessage send_ordinary_message = 5;
    SendHandshakeMessage send_handshake_message = 6;

    HandleWhoAreYou handle_whoareyou = 7;
    // Handle ordinary message or handshake message.
    HandleMessage handle_message = 8;
  }

  message Start {
    string node_id = 1;
  }

  message Shutdown {
    string node_id = 1;
  }

  // https://github.com/ethereum/devp2p/blob/master/discv5/discv5-wire.md#whoareyou-packet-flag--1
  message SendWhoAreYou {
    string sender = 1;
    string recipient = 2;
    repeated uint32 id_nonce = 3; // NOTE: 128bytes (uint8 * 16)
    uint64 enr_seq = 4;
  }

  // https://github.com/ethereum/devp2p/blob/master/discv5/discv5-wire.md#ordinary-message-packet-flag--0
  message SendOrdinaryMessage {
    string sender = 1;
    string recipient = 2;
    oneof message {
      Random random = 3;
      Ping ping = 4;
      Pong pong = 5;
      FindNode find_node = 6;
      Nodes nodes = 7;
    }
  }

  message HandleWhoAreYou {
    string sender = 1;
    string recipient = 2;
    uint64 enr_seq = 3;
  }

  message HandleMessage {
    string sender = 1;
    string recipient = 2;
    oneof message {
      Random random = 3;
      Ping ping = 4;
      Pong pong = 5;
      FindNode find_node = 6;
      Nodes nodes = 7;
    }
  }

  // https://github.com/ethereum/devp2p/blob/master/discv5/discv5-wire.md#handshake-message-packet-flag--2
  message SendHandshakeMessage {
    string sender = 1;
    string recipient = 2;
    Record record = 3;
    oneof message {
      Ping ping = 4;
      Pong pong = 5;
      FindNode find_node = 6;
      Nodes nodes = 7;
    }

    message Record {
      uint64 enr_seq = 1;
    }
  }
}

// https://github.com/ethereum/devp2p/blob/master/discv5/discv5-theory.md#step-1-node-a-sends-message-packet
message Random {}

// https://github.com/ethereum/devp2p/blob/master/discv5/discv5-wire.md#ping-request-0x01
message Ping {
  string request_id = 1;
  uint64 enr_seq = 2;
}

// https://github.com/ethereum/devp2p/blob/master/discv5/discv5-wire.md#pong-response-0x02
message Pong {
  string request_id = 1;
  uint64 enr_seq = 2;
  string recipient_ip = 3;
  uint32 recipient_port = 4;
}

// https://github.com/ethereum/devp2p/blob/master/discv5/discv5-wire.md#findnode-request-0x03
message FindNode {
  string request_id = 1;
  repeated uint64 distances = 2;
}

// https://github.com/ethereum/devp2p/blob/master/discv5/discv5-wire.md#nodes-response-0x04
message Nodes {
  string request_id = 1;
  uint64 total = 2;
  repeated string nodes = 3;
}
